--- a/PR091-BoundLocalService/local.properties
+++ b/PR091-BoundLocalService/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Apr 10 09:10:57 CEST 2014
-sdk.dir=C\:\\Program Files (x86)\\Android\\android-studio\\sdk
+#Fri Apr 11 21:37:07 CEST 2014
+sdk.dir=/Applications/Android Studio.app/sdk
