--- a/PR096-NotificationStyles/app/src/main/AndroidManifest.xml
+++ b/PR096-NotificationStyles/app/src/main/AndroidManifest.xml
@@ -16,6 +16,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="es.iessaladillo.pedrojoya.pr096.ResultadoActivity"
+            android:label="@string/title_activity_resultado"
+            android:parentActivityName="es.iessaladillo.pedrojoya.pr096.MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="es.iessaladillo.pedrojoya.pr096.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
