--- a/PR109-Retrofit/app/build.gradle
+++ b/PR109-Retrofit/app/build.gradle
@@ -24,4 +24,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile 'com.squareup.retrofit:retrofit:1.9.0'
     compile 'com.jakewharton:butterknife:6.0.0'
+    compile 'com.github.curioustechizen.android-ago:library:1.2.0'
 }
