--- a/PR109-Retrofit/app/build.gradle
+++ b/PR109-Retrofit/app/build.gradle
@@ -24,5 +24,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile 'com.squareup.retrofit:retrofit:1.9.0'
     compile 'com.jakewharton:butterknife:6.0.0'
-    compile 'com.github.curioustechizen.android-ago:library:1.2.0'
+    compile 'com.squareup:otto:1.3.6'
+    compile 'com.squareup.okhttp:okhttp-urlconnection:2.0.0'
+    compile 'com.squareup.okhttp:okhttp:2.0.0'
 }
