--- a/PR109-Retrofit/app/build.gradle
+++ b/PR109-Retrofit/app/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     compile 'com.squareup:otto:1.3.6'
     compile 'com.squareup.okhttp:okhttp-urlconnection:2.0.0'
     compile 'com.squareup.okhttp:okhttp:2.0.0'
+    compile 'com.google.android.gms:play-services:6.5.87'
 }
