--- a/PR121-FaceCrop/app/build.gradle
+++ b/PR121-FaceCrop/app/build.gradle
@@ -23,5 +23,5 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile files('libs/FaceCropper-library.jar')
-    compile 'de.hdodenhof:circleimageview:1.2.1'
+    compile 'de.hdodenhof:circleimageview:*'
 }
