PR118 y PR120 analizados

--- a/PR120-SearchViewSuggestions/app/src/main/AndroidManifest.xml
+++ b/PR120-SearchViewSuggestions/app/src/main/AndroidManifest.xml
@@ -36,7 +36,8 @@
         </activity>
         <provider
             android:name=".datos.InstitutoProvider"
-            android:authorities="es.iessaladillo.pedrojoya.pr120.provider" />
+            android:authorities="es.iessaladillo.pedrojoya.pr120.provider"
+            android:exported="false" />
     </application>
 
 </manifest>
