--- a/PR118-SearchView/app/src/main/AndroidManifest.xml
+++ b/PR118-SearchView/app/src/main/AndroidManifest.xml
@@ -18,7 +18,11 @@
         </activity>
         <activity
             android:name=".actividades.BusquedaActivity"
-            android:label="@string/title_activity_busqueda">
+            android:label="@string/title_activity_busqueda"
+            android:parentActivityName=".actividades.MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".actividades.MainActivity" />
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
@@ -26,13 +30,14 @@
                 android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
         </activity>
-
         <provider
             android:name=".datos.BusquedaProvider"
-            android:authorities="es.iessaladillo.pedrojoya.pr118.busquedaprovider" />
+            android:authorities="es.iessaladillo.pedrojoya.pr118.busquedaprovider"
+            android:exported="false" />
         <provider
             android:name=".datos.InstitutoProvider"
-            android:authorities="es.iessaladillo.pedrojoya.pr118.provider" />
+            android:authorities="es.iessaladillo.pedrojoya.pr118.provider"
+            android:exported="false" />
     </application>
 
 </manifest>
