--- a/PR106-RecyclerView/app/build.gradle
+++ b/PR106-RecyclerView/app/build.gradle
@@ -23,4 +23,6 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile 'com.android.support:recyclerview-v7:21.0.3'
+    compile 'com.squareup.picasso:picasso:2.5.0'
+    compile 'de.hdodenhof:circleimageview:1.2.2'
 }
