--- a/PR069-SQLiteDAOSimpleCursorAdapter/app/build.gradle
+++ b/PR069-SQLiteDAOSimpleCursorAdapter/app/build.gradle
@@ -20,10 +20,15 @@ android {
     }
 }
 
+repositories{
+    maven {
+        url 'http://dl.bintray.com/amulyakhare/maven'
+    }
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.0.0'
     compile 'com.github.shell-software:fab:1.0.5'
-    compile 'de.hdodenhof:circleimageview:1.2.2'
-    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
 }
