--- a/PR028-SQLiteLoader/app/build.gradle
+++ b/PR028-SQLiteLoader/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 22
-    buildToolsVersion "21.1.2"
+    buildToolsVersion "22.0.0"
 
     defaultConfig {
         applicationId "es.iessaladillo.pedrojoya.pr028"
@@ -23,4 +23,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.0.0'
+    compile 'com.github.shell-software:fab:1.0.5'
+    compile 'de.hdodenhof:circleimageview:1.2.2'
+    compile 'com.github.bumptech.glide:glide:3.5.2'
 }
