--- a/PR111-SugarORM/app/build.gradle
+++ b/PR111-SugarORM/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 21
-    buildToolsVersion "21.1.2"
+    compileSdkVersion 22
+    buildToolsVersion "22.0.0"
 
     defaultConfig {
         applicationId "es.iessaladillo.pedrojoya.pr111"
         minSdkVersion 14
-        targetSdkVersion 21
+        targetSdkVersion 22
         versionCode 1
         versionName "1.0"
     }
@@ -21,7 +21,10 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:21.0.3'
+    compile 'com.android.support:appcompat-v7:22.0.0'
     compile 'com.jakewharton:butterknife:6.1.0'
     compile 'com.github.satyan:sugar:1.3'
+    compile 'com.github.shell-software:fab:1.0.5'
+    compile 'de.hdodenhof:circleimageview:1.2.2'
+    compile 'com.github.bumptech.glide:glide:3.5.2'
 }
