--- a/PR095-DownloadManager/app/build.gradle
+++ b/PR095-DownloadManager/app/build.gradle
@@ -8,6 +8,8 @@ android {
         applicationId "es.iessaladillo.pedrojoya.pr095"
         minSdkVersion 14
         targetSdkVersion 22
+        versionCode 1
+        versionName "1.0"
     }
 
     buildTypes {
@@ -22,5 +24,4 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.0.0'
     compile 'com.github.shell-software:fab:1.0.5'
-    compile 'com.nispok:snackbar:2.10.6'
 }
