--- a/PR107-RecyclerViewAddOns/app/build.gradle
+++ b/PR107-RecyclerViewAddOns/app/build.gradle
@@ -21,7 +21,9 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:22.1.0'
-    compile 'com.android.support:recyclerview-v7:22.1.0'
+    compile 'com.android.support:appcompat-v7:22.1.1'
+    compile 'com.android.support:recyclerview-v7:22.1.1'
+    compile 'com.squareup.picasso:picasso:2.5.0'
+    compile 'de.hdodenhof:circleimageview:1.2.2'
     compile 'com.github.shell-software:fab:1.0.5'
 }
