--- a/PR100-IntentService/app/build.gradle
+++ b/PR100-IntentService/app/build.gradle
@@ -22,7 +22,8 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:22.1.0'
+    compile 'com.android.support:appcompat-v7:22.1.1'
+    compile 'com.github.ksoichiro:android-observablescrollview:1.5.1'
     compile 'com.github.shell-software:fab:1.0.5'
     compile 'com.nispok:snackbar:2.10.6'
 }
