--- a/PR095-DownloadManager/app/build.gradle
+++ b/PR095-DownloadManager/app/build.gradle
@@ -24,4 +24,5 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.1.0'
     compile 'com.github.shell-software:fab:1.0.5'
+    compile 'com.github.ksoichiro:android-observablescrollview:1.5.1'
 }
