--- a/PR084-VolleyImagenesCache/app/build.gradle
+++ b/PR084-VolleyImagenesCache/app/build.gradle
@@ -23,4 +23,5 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.1.1'
     compile 'com.mcxiaoke.volley:library:1.0.16'
+    compile 'com.android.support:recyclerview-v7:22.1.1'
 }
