--- a/PR105-MaterialNavigationDrawer/app/build.gradle
+++ b/PR105-MaterialNavigationDrawer/app/build.gradle
@@ -30,4 +30,5 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:22.2.0'
     compile 'de.hdodenhof:circleimageview:1.3.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.android.support:support-annotations:22.2.0'
 }
