--- a/PR105-MaterialNavigationDrawer/app/src/main/AndroidManifest.xml
+++ b/PR105-MaterialNavigationDrawer/app/src/main/AndroidManifest.xml
@@ -8,15 +8,23 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme" >
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".DetalleActivity"
+            android:label="@string/title_activity_detalle"
+            android:parentActivityName=".MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="pedrojoya.iessaladillo.es.pr105.MainActivity" />
         </activity>
     </application>
 
