--- a/PR105-MaterialNavigationDrawer/app/src/main/AndroidManifest.xml
+++ b/PR105-MaterialNavigationDrawer/app/src/main/AndroidManifest.xml
@@ -8,9 +8,10 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
+        android:supportsRtl="true"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MainActivity"
+            android:name=".actividades.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,12 +20,12 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".DetalleActivity"
+            android:name=".actividades.DetalleActivity"
             android:label="@string/title_activity_detalle"
-            android:parentActivityName=".MainActivity" >
+            android:parentActivityName=".actividades.MainActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="pedrojoya.iessaladillo.es.pr105.MainActivity" />
+                android:value=".actividades.MainActivity" />
         </activity>
     </application>
 
