--- a/PR159-PreLollipopActivityTransition/app/src/main/AndroidManifest.xml
+++ b/PR159-PreLollipopActivityTransition/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="es.iessaladillo.pedrojoya.pr157"
-          xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="es.iessaldillo.pedrojoya.pr159">
 
     <application
         android:allowBackup="true"
@@ -10,9 +10,9 @@
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity android:name=".DetalleActivity"
