--- a/PR158-Realm/app/src/main/AndroidManifest.xml
+++ b/PR158-Realm/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="es.iessaladillo.pedrojoya.pr158"
-          xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest
+    package="es.iessaladillo.pedrojoya.pr158"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.INTERNET"/>
 
@@ -11,14 +12,21 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".DetalleActivity">
+        <activity
+            android:name=".DetalleActivity"
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/DetalleTheme">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
         </activity>
     </application>
 
