--- a/PR159-PreLollipopActivityTransition/app/src/main/AndroidManifest.xml
+++ b/PR159-PreLollipopActivityTransition/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="es.iessaldillo.pedrojoya.pr159">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -16,6 +18,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".DetalleActivity"
+            android:theme="@style/CollapsingTheme"
             android:label="@string/concepto">
         </activity>
     </application>
