Add appbar to PR157

--- a/PR157-GridRecyclerView/app/src/main/AndroidManifest.xml
+++ b/PR157-GridRecyclerView/app/src/main/AndroidManifest.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="es.iessaladillo.pedrojoya.pr157"
-          xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest
+    package="es.iessaladillo.pedrojoya.pr157"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
@@ -15,8 +18,14 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".DetalleActivity"
-            android:label="@string/concepto">
+        <activity
+            android:name=".DetalleActivity"
+            android:label="@string/concepto"
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/CollapsingTheme">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="es.iessaladillo.pedrojoya.pr157.MainActivity"/>
         </activity>
     </application>
 
