--- a/PR166-SQLiteDAORecyclerViewCursorAdapter/app/build.gradle
+++ b/PR166-SQLiteDAORecyclerViewCursorAdapter/app/build.gradle
@@ -25,5 +25,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
     compile 'com.android.support:recyclerview-v7:23.1.1'
+    compile 'com.facebook.stetho:stetho:1.3.0'
     compile 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
 }
