--- a/PR139-InstagramRetrofit/app/build.gradle
+++ b/PR139-InstagramRetrofit/app/build.gradle
@@ -29,4 +29,6 @@ dependencies {
     compile 'com.squareup.retrofit:converter-gson:2.0.0-beta2'
     compile 'com.squareup.okhttp:logging-interceptor:2.6.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.facebook.stetho:stetho:1.3.0'
+    compile 'com.facebook.stetho:stetho-okhttp:1.3.0'
 }
