--- a/PR027-SQLiteDAO/app/src/main/AndroidManifest.xml
+++ b/PR027-SQLiteDAO/app/src/main/AndroidManifest.xml
@@ -5,14 +5,15 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
         android:supportsRtl="true">
         <activity
-            android:name="es.iessaladillo.pedrojoya.pr027.actividades.MainActivity"
-            android:label="@string/app_name">
+            android:name=".actividades.MainActivity"
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -20,7 +21,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="es.iessaladillo.pedrojoya.pr027.actividades.AlumnoActivity"
+            android:name=".actividades.AlumnoActivity"
             android:label="@string/title_activity_alumno"
             android:parentActivityName=".actividades.MainActivity">
             <meta-data
