--- a/PR027-SQLiteDAO/build.gradle
+++ b/PR027-SQLiteDAO/build.gradle
@@ -4,12 +4,20 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.1.0'
+        classpath 'com.android.tools.build:gradle:1.5.0'
     }
 }
 
 allprojects {
     repositories {
         jcenter()
+        maven {
+            url 'http://dl.bintray.com/amulyakhare/maven'
+        }
     }
 }
+
+task clean(type: Delete) {
+    delete rootProject.buildDir
+}
+
