--- a/PR168-Firebase/app/build.gradle
+++ b/PR168-Firebase/app/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     compile 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
     compile 'de.hdodenhof:circleimageview:2.0.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.firebase:firebase-client-android:2.0.3+'
+    compile 'com.firebase:firebase-client-android:2.5.0+'
     compile 'com.firebaseui:firebase-ui:0.3.1'
+    compile 'com.android.support:support-v4:23.1.1'
 }
