--- a/PR140-RetrofitXML/app/build.gradle
+++ b/PR140-RetrofitXML/app/build.gradle
@@ -30,14 +30,14 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
-    compile 'com.squareup.retrofit:retrofit:2.0.0-beta2'
-    compile ('com.squareup.retrofit:converter-simplexml:2.0.0-beta2') {
+    compile 'com.squareup.retrofit2:retrofit:2.0.0-beta4'
+    compile ('com.squareup.retrofit2:converter-simplexml:2.0.0-beta4') {
         exclude module: 'stax'
         exclude module: 'stax-api'
         exclude module: 'xpp3'
     }
-    compile 'com.squareup.okhttp:logging-interceptor:2.6.0'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.1.2'
     compile 'com.facebook.stetho:stetho:1.3.0'
-    compile 'com.facebook.stetho:stetho-okhttp:1.3.0'
+    compile 'com.facebook.stetho:stetho-okhttp3:1.3.0'
     compile 'com.github.PhilJay:MPAndroidChart:v2.1.0'
 }
