--- a/PR140-RetrofitXML/app/build.gradle
+++ b/PR140-RetrofitXML/app/build.gradle
@@ -30,8 +30,8 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:design:23.1.1'
-    compile 'com.squareup.retrofit2:retrofit:2.0.0-beta4'
-    compile ('com.squareup.retrofit2:converter-simplexml:2.0.0-beta4') {
+    compile 'com.squareup.retrofit2:retrofit:2.0.0'
+    compile ('com.squareup.retrofit2:converter-simplexml:2.0.0') {
         exclude module: 'stax'
         exclude module: 'stax-api'
         exclude module: 'xpp3'
