--- a/PR002-Saludar/app/build.gradle
+++ b/PR002-Saludar/app/build.gradle
@@ -1,15 +1,20 @@
 apply plugin: 'com.android.application'
 
+// Variables.
+def support_library_version = "23.2.1"
+def support_test_version = "0.5"
+
 android {
-    compileSdkVersion 22
-    buildToolsVersion "22.0.1"
+    compileSdkVersion 23
+    buildToolsVersion "23.0.2"
 
     defaultConfig {
         applicationId "es.iessaladillo.pedrojoya.pr002"
         minSdkVersion 14
-        targetSdkVersion 22
+        targetSdkVersion 23
         versionCode 1
         versionName "1.0"
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
 
     buildTypes {
@@ -22,5 +27,10 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:22.1.0'
+    testCompile 'junit:junit:4.12'
+    compile "com.android.support:appcompat-v7:${support_library_version}"
+    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
+    androidTestCompile "com.android.support:support-annotations:${support_library_version}"
+    androidTestCompile "com.android.support.test:runner:${support_test_version}"
+    androidTestCompile "com.android.support.test:rules:${support_test_version}"
 }
