--- a/PR143-LocationAPI/app/build.gradle
+++ b/PR143-LocationAPI/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 
 def support_library_version = "23.3.0"
 def play_services_version = "8.4.0"
+def icepick_version = "3.2.0"
 
 android {
     compileSdkVersion 23
@@ -22,8 +23,14 @@ android {
     }
 }
 
+repositories {
+    maven { url "https://clojars.org/repo/" }
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile "com.android.support:appcompat-v7:${support_library_version}"
     compile "com.google.android.gms:play-services:${play_services_version}"
+    compile "frankiesardo:icepick:${icepick_version}"
+    provided "frankiesardo:icepick-processor:${icepick_version}"
 }
