--- a/PR095-DownloadManager/app/src/main/AndroidManifest.xml
+++ b/PR095-DownloadManager/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         tools:ignore="AllowBackup,GoogleAppIndexingWarning">
         <activity
             android:name=".actividades.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
