PR179 Use global variables in gradle

--- a/PR179-CustomTabs/build.gradle
+++ b/PR179-CustomTabs/build.gradle
@@ -16,6 +16,12 @@ allprojects {
     repositories {
         jcenter()
     }
+    // Variables globales.
+    ext {
+        compileSdkVersion = 23
+        buildToolsVersion = "23.0.2"
+        support_library_version = "23.4.0"
+    }
 }
 
 task clean(type: Delete) {
