--- a/PR179-CustomTabs/app/build.gradle
+++ b/PR179-CustomTabs/app/build.gradle
@@ -1,10 +1,8 @@
 apply plugin: 'com.android.application'
 
-def support_library_version = "23.4.0"
-
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    compileSdkVersion rootProject.ext.compileSdkVersion
+    buildToolsVersion rootProject.ext.buildToolsVersion
 
     defaultConfig {
         applicationId "es.iessaladillo.pedrojoya.pr179"
@@ -19,15 +17,16 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile "com.android.support:appcompat-v7:${support_library_version}"
-    compile "com.android.support:design:${support_library_version}"
-    compile "com.android.support:recyclerview-v7:${support_library_version}"
-    compile "com.android.support:percent:${support_library_version}"
-    compile "com.android.support:cardview-v7:${support_library_version}"
-    compile "com.android.support:customtabs:${support_library_version}"
+    compile "com.android.support:appcompat-v7:$rootProject.ext.support_library_version"
+    compile "com.android.support:design:$rootProject.ext.support_library_version"
+    compile "com.android.support:recyclerview-v7:$rootProject.ext.support_library_version"
+    compile "com.android.support:percent:$rootProject.ext.support_library_version"
+    compile "com.android.support:cardview-v7:$rootProject.ext.support_library_version"
+    compile "com.android.support:customtabs:$rootProject.ext.support_library_version"
 }
