--- a/PR182-FirebaseChat/app/build.gradle
+++ b/PR182-FirebaseChat/app/build.gradle
@@ -22,7 +22,6 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
     compile "com.android.support:appcompat-v7:$rootProject.ext.supportLibraryVersion"
     compile "com.android.support:design:$rootProject.ext.supportLibraryVersion"
     compile "com.github.bumptech.glide:glide:$glideVersion"
@@ -30,4 +29,8 @@ dependencies {
     apt "com.jakewharton:butterknife-compiler:$butterknifeVersion"
     compile "com.f2prateek.dart:dart:$dartVersion"
     provided "com.f2prateek.dart:dart-processor:$dartVersion"
+    compile "com.marlonmafra.android.widget:edittext-password:$edittextpasswordVersion"
+    // Testing
+    testCompile "junit:junit:$jUnitVersion"
+    testCompile "org.mockito:mockito-core:$mockitoVersion"
 }
