--- a/PR182-FirebaseChat/build.gradle
+++ b/PR182-FirebaseChat/build.gradle
@@ -26,13 +26,15 @@ task clean(type: Delete) {
 ext {
     compileSdkVersion = 23
     buildToolsVersion = "23.0.2"
-    minSdkVersion = 14
+    minSdkVersion = 15
     targetSdkVersion = 23
-    jUnitVersion = "4.12"
-    mockitoVersion = "1.10.19"
     supportLibraryVersion = "23.4.0"
     glideVersion = "3.7.0"
     butterknifeVersion = "8.0.1"
     dartVersion = "2.0.0"
     edittextpasswordVersion = "1.0.0"
+    junitVersion = "4.12"
+    mockitoVersion = "1.10.19"
+    hamcrestVersion = "1.3"
+    powerMockitoVersion = "1.6.5"
 }
