--- a/PR183-FirebasePush/gradle.properties
+++ b/PR183-FirebasePush/gradle.properties
@@ -16,3 +16,6 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+TITULO=Baldomero
+TEXTO=Llegate ligero
+NUEVOTEXTO=No te digo trigo por no llamarte Rodrigo
