--- a/PR184-DAMTwitterClient/app/src/main/AndroidManifest.xml
+++ b/PR184-DAMTwitterClient/app/src/main/AndroidManifest.xml
@@ -10,7 +10,10 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".LoginActivity"
+            android:theme="@style/LoginTheme"
+            android:noHistory="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
