--- a/PR004-IntentsImplicitos/app/build.gradle
+++ b/PR004-IntentsImplicitos/app/build.gradle
@@ -1,9 +1,11 @@
 apply plugin: 'com.android.application'
+apply plugin: 'me.tatarka.retrolambda'
 
-def support_library_version = "24.2.0"
+def support_library_version = "24.2.1"
 def espresso_version = "2.2.2"
 def testrunner_version = "0.5"
 
+//noinspection GroovyMissingReturnStatement
 android {
     compileSdkVersion 24
     buildToolsVersion "23.0.3"
@@ -24,11 +26,17 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile "com.android.support:appcompat-v7:${support_library_version}"
+    compile "com.android.support:design:${support_library_version}"
     androidTestCompile "com.android.support:support-annotations:${support_library_version}"
     androidTestCompile "com.android.support.test.espresso:espresso-intents:${espresso_version}"
     androidTestCompile "com.android.support.test.espresso:espresso-core:${espresso_version}"
