--- a/PR188-PermissionsDispatcher/app/build.gradle
+++ b/PR188-PermissionsDispatcher/app/build.gradle
@@ -1,7 +1,8 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.neenbedankt.android-apt'
+apply plugin: 'me.tatarka.retrolambda'
 
-def support_library_version = "24.2.0"
+def support_library_version = "24.2.1"
 def butterknife_version = "8.4.0"
 def permissions_dispatcher_version = "2.1.3"
 
@@ -21,6 +22,10 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 
