--- a/PR159-PreLollipopActivityTransition/app/src/main/AndroidManifest.xml
+++ b/PR159-PreLollipopActivityTransition/app/src/main/AndroidManifest.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="es.iessaldillo.pedrojoya.pr159">
+          xmlns:tools="http://schemas.android.com/tools"
+          package="es.iessaldillo.pedrojoya.pr159">
 
-    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
@@ -14,12 +14,13 @@
         tools:ignore="AllowBackup,GoogleAppIndexingWarning">
         <activity android:name=".MainActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".DetalleActivity"
+        <activity
+            android:name=".DetalleActivity"
             android:theme="@style/CollapsingTheme"
             android:label="@string/concepto">
         </activity>
