--- a/PR143-LocationAPI/app/build.gradle
+++ b/PR143-LocationAPI/app/build.gradle
@@ -1,25 +1,34 @@
 apply plugin: 'com.android.application'
+apply plugin: 'me.tatarka.retrolambda'
+apply plugin: 'android-apt'
 
-def support_library_version = "23.3.0"
-def play_services_version = "8.4.0"
+def multidex_version = "1.0.0"
+def support_library_version = "24.2.1"
+def play_services_version = "9.4.0"
 def icepick_version = "3.2.0"
+def permissionsdispatcher_version = "2.2.0"
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    compileSdkVersion 24
+    buildToolsVersion "23.0.3"
 
     defaultConfig {
         applicationId "es.iessaladillo.pedrojoya.pr143"
         minSdkVersion 14
-        targetSdkVersion 23
+        targetSdkVersion 24
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 
@@ -29,8 +38,13 @@ repositories {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile "com.android.support:multidex:${multidex_version}"
     compile "com.android.support:appcompat-v7:${support_library_version}"
+    compile "com.android.support:design:${support_library_version}"
+    //noinspection GradleDependency
     compile "com.google.android.gms:play-services:${play_services_version}"
     compile "frankiesardo:icepick:${icepick_version}"
     provided "frankiesardo:icepick-processor:${icepick_version}"
+    compile "com.github.hotchemi:permissionsdispatcher:${permissionsdispatcher_version}"
+    apt "com.github.hotchemi:permissionsdispatcher-processor:${permissionsdispatcher_version}"
 }
