--- a/PR143-LocationAPI/app/src/main/AndroidManifest.xml
+++ b/PR143-LocationAPI/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="es.iessaladillo.pedrojoya.pr143"
+<manifest xmlns:tools="http://schemas.android.com/tools"
+          package="es.iessaladillo.pedrojoya.pr143"
           xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!-- Localización por GPS, Móvil y WiFi -->
@@ -10,12 +11,9 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
-
-        <!-- Para la versión de Google Play Services -->
-        <meta-data
-            android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version"/>
+        android:theme="@style/AppTheme"
+        android:name="android.support.multidex.MultiDexApplication"
+        tools:ignore="AllowBackup,GoogleAppIndexingWarning">
 
         <activity
             android:name=".MainActivity"
