--- a/PR159-PreLollipopActivityTransition/app/build.gradle
+++ b/PR159-PreLollipopActivityTransition/app/build.gradle
@@ -1,15 +1,18 @@
 apply plugin: 'com.android.application'
+apply plugin: 'me.tatarka.retrolambda'
 
-def support_library_version = "23.3.0"
+def support_library_version = "24.2.1"
+def pre_lollipop_activity_transition_version = "1.3.2"
 
+//noinspection GroovyMissingReturnStatement
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    compileSdkVersion 24
+    buildToolsVersion "23.0.3"
 
     defaultConfig {
         applicationId "es.iessaldillo.pedrojoya.pr159"
         minSdkVersion 15
-        targetSdkVersion 23
+        targetSdkVersion 24
         versionCode 1
         versionName "1.0"
     }
@@ -18,6 +21,10 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 
@@ -29,5 +36,5 @@ dependencies {
     compile "com.android.support:recyclerview-v7:${support_library_version}"
     compile "com.android.support:percent:${support_library_version}"
     compile "com.android.support:cardview-v7:${support_library_version}"
-    compile 'com.kogitune:pre-lollipop-activity-transition:1.3.0'
+    compile "com.kogitune:pre-lollipop-activity-transition:${pre_lollipop_activity_transition_version}"
 }
