--- a/PR160-CollapsingToolbarTabLayout/app/build.gradle
+++ b/PR160-CollapsingToolbarTabLayout/app/build.gradle
@@ -1,15 +1,17 @@
 apply plugin: 'com.android.application'
+apply plugin: 'me.tatarka.retrolambda'
 
-def support_library_version = "23.3.0"
+def support_library_version = "24.2.1"
 
+//noinspection GroovyMissingReturnStatement
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    compileSdkVersion 24
+    buildToolsVersion "23.0.3"
 
     defaultConfig {
         applicationId "es.iessaldillo.pedrojoya.pr160"
         minSdkVersion 14
-        targetSdkVersion 23
+        targetSdkVersion 24
         versionCode 1
         versionName "1.0"
     }
