--- a/PR161-LaunchScreen/app/src/main/AndroidManifest.xml
+++ b/PR161-LaunchScreen/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:tools="http://schemas.android.com/tools"
-    package="es.iessaladillo.pedrojoya.pr161"
+          package="es.iessaladillo.pedrojoya.pr161"
           xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
@@ -10,8 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup,GoogleAppIndexingWarning">
-        <activity android:name=".MainActivity"
-                  android:theme="@style/AppTheme.Launcher">
+        <activity
+            android:name=".MainActivity"
+            android:theme="@style/AppTheme.Launcher">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
