PR129-PR130 Fix memory leaks

--- a/PR129-RelojMultihilo/app/build.gradle
+++ b/PR129-RelojMultihilo/app/build.gradle
@@ -1,15 +1,16 @@
 apply plugin: 'com.android.application'
 
-def support_library_version = "23.3.0"
+def support_library_version = "25.1.0"
 
+//noinspection GroovyMissingReturnStatement
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    compileSdkVersion 25
+    buildToolsVersion "25.0.2"
 
     defaultConfig {
         applicationId "es.iessaladillo.pedrojoya.pspro.andr0203"
         minSdkVersion 14
-        targetSdkVersion 23
+        targetSdkVersion 25
         versionCode 1
         versionName "1.0"
     }
@@ -25,4 +26,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile "com.android.support:appcompat-v7:${support_library_version}"
+    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'
+    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
+    testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
 }
