--- a/PR027-SQLiteDAO/app/build.gradle
+++ b/PR027-SQLiteDAO/app/build.gradle
@@ -1,19 +1,14 @@
 apply plugin: 'com.android.application'
 
-def support_library_version = "23.3.0"
-def stetho_version = "1.3.1"
-def picasso_version = "2.5.2"
-def circleimageview_version = "2.0.0"
-def textdrawable_version = "1.0.1"
-
+//noinspection GroovyMissingReturnStatement
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    compileSdkVersion rootProject.ext.compileSdkVersion
+    buildToolsVersion rootProject.ext.buildToolsVersion
 
     defaultConfig {
         applicationId "es.iessaladillo.pedrojoya.pr027"
-        minSdkVersion 14
-        targetSdkVersion 23
+        minSdkVersion rootProject.ext.minSdkVersion
+        targetSdkVersion rootProject.ext.compileSdkVersion
         versionCode 1
         versionName "1.0"
     }
@@ -28,12 +23,12 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
-    compile "com.android.support:appcompat-v7:${support_library_version}"
-    compile "com.android.support:design:${support_library_version}"
-    compile "com.android.support:recyclerview-v7:${support_library_version}"
-    compile "com.facebook.stetho:stetho:${stetho_version}"
-    compile "com.amulyakhare:com.amulyakhare.textdrawable:${textdrawable_version}"
-    compile "de.hdodenhof:circleimageview:${circleimageview_version}"
-    compile "com.squareup.picasso:picasso:${picasso_version}"
+    testCompile "junit:junit:$rootProject.ext.junit_version"
+    compile "com.android.support:appcompat-v7:$rootProject.ext.support_library_version"
+    compile "com.android.support:design:$rootProject.ext.support_library_version"
+    compile "com.android.support:recyclerview-v7:$rootProject.ext.support_library_version"
+    compile "com.facebook.stetho:stetho:$rootProject.ext.stetho_version"
+    compile "com.amulyakhare:com.amulyakhare.textdrawable:$rootProject.ext.textdrawable_version"
+    compile "de.hdodenhof:circleimageview:$rootProject.ext.circleimageview_version"
+    compile "com.squareup.picasso:picasso:$rootProject.ext.picasso_version"
 }
