--- a/PR027-SQLiteDAO/build.gradle
+++ b/PR027-SQLiteDAO/build.gradle
@@ -4,7 +4,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.0'
+        classpath 'com.android.tools.build:gradle:2.2.3'
     }
 }
 
@@ -15,6 +15,18 @@ allprojects {
             url 'http://dl.bintray.com/amulyakhare/maven'
         }
     }
+}
+
+ext {
+    compileSdkVersion = 25
+    minSdkVersion = 14
+    buildToolsVersion = "25.0.1"
+    support_library_version = "25.1.1"
+    picasso_version = "2.5.2"
+    circleimageview_version = "2.1.0"
+    stetho_version = "1.4.2"
+    textdrawable_version = "1.0.1"
+    junit_version = 4.12
 }
 
 task clean(type: Delete) {
