--- a/PR092-SwipeRefreshLayout/build.gradle
+++ b/PR092-SwipeRefreshLayout/build.gradle
@@ -4,8 +4,18 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.0'
+        classpath 'com.android.tools.build:gradle:2.2.3'
     }
+}
+
+ext {
+    compileSdkVersion = 25
+    minSdkVersion = 14
+    buildToolsVersion = "25.0.1"
+    support_library_version = "25.1.1"
+    picasso_version = "2.5.2"
+    circleimageview_version = "2.1.0"
+    butterknife_version = "8.5.1"
 }
 
 allprojects {
