--- a/PR092-SwipeRefreshLayout/gradle/wrapper/gradle-wrapper.properties
+++ b/PR092-SwipeRefreshLayout/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Thu Apr 28 22:56:13 CEST 2016
+#Thu Feb 02 17:41:06 CET 2017
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-2.10-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-2.14.1-all.zip
