--- a/PR105-MaterialNavigationDrawer/build.gradle
+++ b/PR105-MaterialNavigationDrawer/build.gradle
@@ -5,11 +5,20 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.0'
+        classpath 'com.android.tools.build:gradle:2.2.3'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
+}
+
+ext {
+    compileSdkVersion = 25
+    minSdkVersion = 14
+    buildToolsVersion = "25.0.1"
+    support_library_version = "25.1.1"
+    picasso_version = "2.5.2"
+    circleimageview_version = "2.1.0"
 }
 
 allprojects {
