--- a/PR166-SQLiteDAORecyclerViewCursorAdapter/gradle/wrapper/gradle-wrapper.properties
+++ b/PR166-SQLiteDAORecyclerViewCursorAdapter/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Wed Apr 27 09:24:49 CEST 2016
+#Sun Feb 05 19:28:48 CET 2017
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-2.10-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-2.14.1-all.zip
