--- a/PR181-RecyclerViewMVP/build.gradle
+++ b/PR181-RecyclerViewMVP/build.gradle
@@ -5,8 +5,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.2'
-        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
+        classpath 'com.android.tools.build:gradle:2.2.3'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -14,12 +13,13 @@ buildscript {
 }
 
 ext {
-    compileSdkVersion = 23
-    buildToolsVersion = "23.0.2"
-    support_library_version = "23.3.0"
+    compileSdkVersion = 25
+    minSdkVersion = 14
+    buildToolsVersion = "25.0.1"
+    support_library_version = "25.1.1"
     picasso_version = "2.5.2"
-    circleimageview_version = "2.0.0"
-    butterknife_version = "8.0.1"
+    circleimageview_version = "2.1.0"
+    butterknife_version = "8.5.1"
 }
 
 allprojects {
