--- a/PR002-Saludar/app/build.gradle
+++ b/PR002-Saludar/app/build.gradle
@@ -1,17 +1,14 @@
 apply plugin: 'com.android.application'
 
-// Variables.
-def support_library_version = "24.2.0"
-def support_test_version = "0.5"
-
+//noinspection GroovyMissingReturnStatement
 android {
-    compileSdkVersion 24
-    buildToolsVersion "23.0.3"
+    compileSdkVersion rootProject.ext.compileSdkVersion
+    buildToolsVersion rootProject.ext.buildToolsVersion
 
     defaultConfig {
         applicationId "es.iessaladillo.pedrojoya.pr002"
-        minSdkVersion 14
-        targetSdkVersion 24
+        minSdkVersion rootProject.ext.minSdkVersion
+        targetSdkVersion rootProject.ext.compileSdkVersion
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -27,10 +24,15 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
-    compile "com.android.support:appcompat-v7:${support_library_version}"
-    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
-    androidTestCompile "com.android.support:support-annotations:${support_library_version}"
-    androidTestCompile "com.android.support.test:runner:${support_test_version}"
-    androidTestCompile "com.android.support.test:rules:${support_test_version}"
+    testCompile "junit:junit:$rootProject.ext.junit_version"
+    compile "com.android.support:appcompat-v7:$rootProject.ext.support_library_version"
+    androidTestCompile("com.android.support.test.espresso:espresso-core:$rootProject.ext.espresso_version", {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
+    androidTestCompile("com.android.support.test:runner:$rootProject.ext.support_test_version", {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
+    androidTestCompile("com.android.support.test:rules:$rootProject.ext.support_test_version", {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
 }
