--- a/PR002-Saludar/build.gradle
+++ b/PR002-Saludar/build.gradle
@@ -4,7 +4,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.3'
+        classpath 'com.android.tools.build:gradle:2.2.3'
     }
 }
 
@@ -14,6 +14,12 @@ allprojects {
     }
 }
 
-task clean(type: Delete) {
-    delete rootProject.buildDir
+ext {
+    compileSdkVersion = 25
+    minSdkVersion = 14
+    buildToolsVersion = "25.0.2"
+    support_library_version = "25.1.1"
+    junit_version = "4.12"
+    espresso_version = "2.2.2"
+    support_test_version = "0.5"
 }
