--- a/PR030-ImagenCapturaEscalaMediaStore/build.gradle
+++ b/PR030-ImagenCapturaEscalaMediaStore/build.gradle
@@ -19,4 +19,5 @@ ext {
     minSdkVersion = 14
     buildToolsVersion = "25.0.2"
     support_library_version = "25.1.1"
+    permissionsdispatcher_version = "2.3.1"
 }
