--- a/PR035-ImagenCrop/build.gradle
+++ b/PR035-ImagenCrop/build.gradle
@@ -20,5 +20,6 @@ ext {
     buildToolsVersion = "25.0.2"
     support_library_version = "25.1.1"
     permissionsdispatcher_version = "2.3.1"
+    ucrop_version = "2.2.0"
 }
 
