--- a/PR101-ActividadONotificacion/app/src/main/AndroidManifest.xml
+++ b/PR101-ActividadONotificacion/app/src/main/AndroidManifest.xml
@@ -24,6 +24,19 @@
         </activity>
 
         <service android:name=".ExportarService" />
+        <!-- FileProvider para compartir archivos (necesario para proporcionar
+     la URI del archivo al programa que lo visualice -->
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="es.iessaladillo.pedrojoya.pr101.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <!-- En file_paths indicamos las carpetas que se "compartirán" -->
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths">
+            </meta-data>
+        </provider>
 
     </application>
 
