--- a/PR101-ActividadONotificacion/build.gradle
+++ b/PR101-ActividadONotificacion/build.gradle
@@ -19,5 +19,6 @@ ext {
     minSdkVersion = 14
     buildToolsVersion = "25.0.2"
     support_library_version = "25.1.1"
+    permissionsdispatcher_version = "2.3.1"
 }
 
