--- a/PR037-GrabarSonido/build.gradle
+++ b/PR037-GrabarSonido/build.gradle
@@ -4,7 +4,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.0'
+        classpath 'com.android.tools.build:gradle:2.2.3'
     }
 }
 
@@ -12,4 +12,12 @@ allprojects {
     repositories {
         jcenter()
     }
+}
+
+ext {
+    compileSdkVersion = 25
+    minSdkVersion = 14
+    buildToolsVersion = "25.0.2"
+    support_library_version = "25.2.0"
+    permissionsdispatcher_version = "2.3.1"
 }
